samples/_failures_safe/1761072599_14f573_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3a2bb5ee.c: In function ‘main’:
./samples/SAFE/__tmp_3a2bb5ee.c:112:19: error: ‘MATRI’ undeclared (first use in this function)
  112 |     Matrix mat2 = MATRI
      |                   ^~~~~
./samples/SAFE/__tmp_3a2bb5ee.c:112:19: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_3a2bb5ee.c:112:5: error: expected ‘,’ or ‘;’ at end of input
  112 |     Matrix mat2 = MATRI
      |     ^~~~~~
./samples/SAFE/__tmp_3a2bb5ee.c:112:5: error: expected declaration or statement at end of input
